Updated Reassignment property and GC stats for Dev Env